# robo-warehouse

./: .gitignore  .pre-commit-config.yaml  README.md  README.ru.md  pyproject.toml
src/: main.py
