[project]
name = "robo-warehouse"
version = "0.1.0"
description = "Robot-based architecture for a warehouse idea"
readme = "README.md"
license = "LICENSE.md"
authors = [
    { name = "ebolblga" }
]

requires-python = ">=3.10"

dependencies = [
    # "bpy==4.5.1",
    # "mathutils==3.3.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "ruff>=0.12.8",
]

[tool.ruff]
exclude = [
    ".git",
    ".ipynb_checkpoints",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "venv",
    "__pycache__",
    "assets",
]
fix = true
indent-width = 4
line-length = 79

[tool.ruff.lint]
select = [
    "ANN",
    "B",
    "E",
    "F",
    "I",
    "T",
]
ignore = [
    "T201",
    "E501",
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.pyright]
include = [
    "src/",
]
typeCheckingMode = "basic"
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"
